--- a/S3Trial/Base.lproj/Main.storyboard
+++ b/S3Trial/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eUo-OX-SmC">
+                            <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera" translatesAutoresizingMaskIntoConstraints="NO" id="eUo-OX-SmC">
                                 <rect key="frame" x="150" y="33" width="300" height="300"/>
                                 <gestureRecognizers/>
                                 <constraints>
@@ -62,4 +62,7 @@
             <point key="canvasLocation" x="261" y="289"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="camera" width="50" height="50"/>
+    </resources>
 </document>
